dumby test exception class

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
     - travis_retry composer install --no-interaction --no-suggest
 
 script:
-    # - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests
+    - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests
 
 cache:
     directories:
