--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
             "Brontosaurus\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.1"
+    }
 }
