--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ php:
 install:
     - travis_retry composer install --no-interaction --no-suggest
 
-# script:
-#     - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests
+script:
+    - ./vendor/bin/phpunit --bootstrap vendor/autoload.php --testdox tests
 
 cache:
     directories:
